# rust-cross-build

./: .gitignore  README.md
dockerfiles/HOST/: Dockerfile
projects/cc/: Cargo.toml  build.rs
projects/cc/src/: hello.c  main.rs
projects/hello/.cargo/: config.toml
projects/mystaticlib/: Cargo.toml
projects/wpoc/: Makefile  README.md
projects/wpoc/lib/api/: Cargo.toml
projects/wpoc/lib/c-api/: Cargo.toml
projects/wpoc/lib/c-api/src/: lib.rs
projects/wpoc/lib/cli/: Cargo.toml
projects/wpoc/lib/vm/: Cargo.toml
projects/wpoc/lib/vm/src/: hello.c
