[package]
name = "wpoccapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# warning: dropping unsupported crate type `cdylib` for target `x86_64-unknown-linux-musl`
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
wasmer-api = { path = "../api", default-features = false, package = "wpoc" }
